--- a/src/controller/MainPage.form
+++ b/src/controller/MainPage.form
@@ -100,6 +100,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="SFTSwitchLite"/>
+    <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection code="new ImageIcon(&quot;sourceFile\\nintendo-switch.png&quot;).getImage()" type="code"/>
+    </Property>
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
       <Point value="[350, 200]"/>
     </Property>
